--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-console-time-polyfill": "^1.2.1",
+    "react-native-modal": "^11.5.6",
     "react-native-sqlite-storage": "^5.0.0"
   },
   "devDependencies": {
